# alpha-pulse

./: .env.example  .gitignore  AlphaPulse-PRD.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: cleanup.md  coverage.md  push.md  status.md  test.md
.claude/docs/: cli-commands.md  conventions.md
.claude/hooks/: block-dangerous-commands.sh  check-asyncio-run.sh  post-compact-reminder.sh  ruff-check.sh
.claude/rules/: agent-conventions.md  async-modules.md  market-sync-only.md  testing.md
.github/workflows/: security-scan.yml
alphapulse/: __init__.py  cli.py
alphapulse/agents/: commentary.py  synthesis.py  tools.py
alphapulse/briefing/: formatter.py  orchestrator.py  scheduler.py
alphapulse/content/: __init__.py  aggregator.py  category_filter.py  channel_monitor.py  crawler.py  detector.py  monitor.py  reporter.py
alphapulse/core/: config.py  constants.py  notifier.py
alphapulse/feedback/: collector.py  evaluator.py  news_collector.py  summarizer.py
alphapulse/trading/: __init__.py
alphapulse/webapp/: cli.py  config.py  main.py  notifier.py
docs/: trading-system-guide.md
docs/operations/: 01-data-collection.md  02-screening-ranking.md  03-strategy.md  04-backtesting.md  05-auto-trading.md  06-feedback-system.md  backup-restore.md  security-checklist.md  strategy-presets.md  webapp-deployment.md  webapp-runbook.md
scripts/: backup.sh
systemd/: alphapulse-fastapi.service  alphapulse-webapp-ui.service  cloudflared.service.example
tests/: conftest.py  test_cli.py  test_integration.py
tests/agents/: test_commentary.py  test_synthesis.py
tests/briefing/: test_formatter.py  test_orchestrator.py  test_orchestrator_save.py  test_scheduler.py
tests/content/: test_aggregator.py  test_category_filter.py  test_channel_integration.py  test_channel_monitor.py  test_crawler.py  test_detector.py  test_integration.py  test_monitor.py  test_monitor_return.py  test_orchestrator.py  test_reporter.py  test_senior_analyst.py  test_specialists.py  test_topic_classifier.py
tests/core/: test_config.py  test_notifier.py  test_storage.py
tests/feedback/: test_agents.py  test_collector.py  test_evaluator.py  test_news_collector.py  test_store.py  test_summarizer.py
tests/market/: conftest.py  test_analyzers.py  test_collectors.py  test_engine.py  test_integration.py
tests/trading/: conftest.py  test_cli_trading.py  test_config_trading.py  test_e2e_backtest.py  test_integration.py
tests/webapp/: conftest.py  test_audit.py  test_cli_webapp.py  test_cli_webapp_settings.py  test_config.py  (+3 more)
webapp-ui/: .env.test.example  .gitignore  middleware.ts  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
(+465 files in other folders)
